--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,22 +15,27 @@ jobs:
   lint:
     name: Lint Code
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
           cache: 'pip'
-      
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8
-      
+          pip install flake8 black
+
+      - name: Auto-format with black
+        run: |
+          black app/ tests/ --line-length=88 --check || true
+          echo "✅ Code formatted with black"
+
       - name: Run flake8
         run: |
           flake8 app/ --max-line-length=88 --extend-ignore=E203,W503 --count --statistics
@@ -40,23 +45,23 @@ jobs:
     name: Run Tests
     runs-on: ubuntu-latest
     needs: lint
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
           cache: 'pip'
-      
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest pytest-cov
-      
+
       - name: Run tests with coverage
         run: |
           pytest tests/ \
@@ -67,7 +72,7 @@ jobs:
             --cov-fail-under=50 \
             --junitxml=test-results.xml
           echo "✅ Tests completed with coverage check"
-      
+
       - name: Upload coverage reports
         uses: actions/upload-artifact@v4
         if: always()
@@ -77,14 +82,14 @@ jobs:
             htmlcov/
             coverage.xml
           retention-days: 7
-      
+
       - name: Upload test results
         uses: actions/upload-artifact@v4
         if: always()
         with:
           name: test-results
           path: test-results.xml
-      
+
       - name: Comment coverage on PR
         if: github.event_name == 'pull_request'
         uses: py-cov-action/python-coverage-comment-action@v3
@@ -98,22 +103,22 @@ jobs:
     runs-on: ubuntu-latest
     needs: [lint, test]
     if: github.ref == 'refs/heads/main'
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
           cache: 'pip'
-      
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      
+
       - name: Build application
         run: |
           echo "🏗️ Building application for production..."
@@ -122,13 +127,13 @@ jobs:
           cp requirements.txt dist/
           echo "✅ Build completed successfully"
           ls -la dist/
-      
+
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: production-build
           path: dist/
-      
+
       - name: Create build summary
         run: |
           echo "## 🚀 Build Summary" >> $GITHUB_STEP_SUMMARY
