--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,12 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 black
-
-      - name: Auto-format with black
-        run: |
-          black app/ tests/ --line-length=88 --check || true
-          echo "✅ Code formatted with black"
+          pip install flake8
 
       - name: Run flake8
         run: |
@@ -45,6 +40,9 @@ jobs:
     name: Run Tests
     runs-on: ubuntu-latest
     needs: lint
+
+    env:
+      PYTHONPATH: ${{ github.workspace }}
 
     steps:
       - name: Checkout code
